--- a/app/src/main/res/layout/fragment_second.xml
+++ b/app/src/main/res/layout/fragment_second.xml
@@ -13,16 +13,23 @@
             android:layout_height="48dp"
             android:text="@string/button_cancel"
             app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="30dp" app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"/>
+            android:layout_marginTop="4dp" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintHorizontal_bias="0.22" app:layout_constraintEnd_toEndOf="parent"/>
     <TextView
             android:id="@+id/textResult"
-            android:layout_width="402dp"
-            android:layout_height="626dp"
+            android:layout_width="407dp"
+            android:layout_height="661dp"
             android:textAlignment="center"
             android:textSize="18sp"
             app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="100dp" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginTop="72dp" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.333"/>
+    <Button
+            android:text="@string/button_open"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" android:id="@+id/button_open"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="4dp" app:layout_constraintStart_toEndOf="@+id/buttonCancel"
             app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
